--- a/index.html
+++ b/index.html
@@ -9,20 +9,166 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>MotorPage</title>
   </head>
-  <body>
+  <body class="bg-bodyimage">
     <header class="container-fluid">
       <div class="row">
-        <div class="col-12">
-          <!--TODO nav bar-->
+        <div class="col-12 p-0">
+          <!--NOTE nav bar goes here-->
+          <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <div class="text-color navbar-brand">Navbar</div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#"
+                    >Home <span class="sr-only">(current)</span></a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle"
+                    href="#"
+                    id="navbarDropdown"
+                    role="button"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  >
+                    Dropdown
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+              </ul>
+              <form class="form-inline my-2 my-lg-0">
+                <input
+                  class="form-control mr-sm-2"
+                  type="search"
+                  placeholder="Search"
+                  aria-label="Search"
+                />
+                <button
+                  class="btn btn-outline-success my-2 my-sm-0"
+                  type="submit"
+                >
+                  Search
+                </button>
+              </form>
+            </div>
+          </nav>
         </div>
+      </div>
+      <div class="row">
+        <div class="col-12"></div>
       </div>
     </header>
     <main class="container-fluid">
       <div class="row">
-        <div class="col-12"></div>
-        <div class="col-12"></div>
+        <div class="col-12">
+          <class class="row">
+            <div class="col">
+              <!--Text and button-->
+              <h1 class="text-color">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam
+                distinctio ut reiciendis ex! Molestias cumque ratione
+                perspiciatis magni omnis quam itaque nam nisi voluptates fugit!
+                Fuga, asperiores? Voluptates, eius sunt.
+              </h1>
+              <button type="button" class="btn-primary btn-rounded">
+                Store
+              </button>
+            </div>
+            <div class="col">
+              <!--iframe youtube link-->
+              <iframe
+                width="560"
+                height="315"
+                src="https://www.youtube.com/embed/BkB-AurY6JE?start=197"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </class>
+        </div>
+        <div class="col-12">
+          <div class="row">
+            <div class="col-4">
+              <div class="card card-main-color" style="width: 18rem;">
+                <img
+                  src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
+                  class="article-img card-img-top p-2 mx-auto mb-3"
+                  alt="kz650"
+                />
+                <div class="card-body card-color">
+                  <h5 class="card-title">KZ650 C1</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Gallery</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card card-main-color" style="width: 18rem;">
+                <img
+                  src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
+                  class="article-img card-img-top p-2 mx-auto mb-3"
+                  alt="kz650"
+                />
+                <div class="card-body card-color">
+                  <h5 class="card-title">KZ650 C1</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Gallery</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="card card-main-color" style="width: 18rem;">
+                <img
+                  src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
+                  class="article-img card-img-top p-2 mx-auto mb-3"
+                  alt="kz650"
+                />
+                <div class="card-body card-color">
+                  <h5 class="card-title">KZ650 C1</h5>
+                  <p class="card-text">
+                    Some quick example text to build on the card title and make
+                    up the bulk of the card's content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Gallery</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col-12"></div>
       </div>
     </main>
