--- a/index.html
+++ b/index.html
@@ -87,10 +87,22 @@
     </header>
     <main class="container-fluid">
       <div class="row">
-        <div class="col-12">
+        <div class="col">
           <class class="row">
-            <div class="col">
-              <!--Text and button-->
+            <div class="col-sm-8 order-sm-12">
+              <!--NOTE iframe youtube link-->
+              <iframe
+                class="video-style"
+                width="560px"
+                height="314px"
+                src="https://www.youtube.com/embed/BkB-AurY6JE?start=197"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
+            <div class="col-sm-4">
+              <!--NOTE Text and button-->
               <h1 class="text-color">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam
                 distinctio ut reiciendis ex! Molestias cumque ratione
@@ -101,23 +113,12 @@
                 Store
               </button>
             </div>
-            <div class="col">
-              <!--iframe youtube link-->
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/BkB-AurY6JE?start=197"
-                frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
           </class>
         </div>
         <div class="col-12">
           <div class="row">
-            <div class="col-4">
-              <div class="card card-main-color" style="width: 18rem;">
+            <div class="col-12 col-md-4">
+              <div class="card card-main-color">
                 <img
                   src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
                   class="article-img card-img-top p-2 mx-auto mb-3"
@@ -133,8 +134,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
-              <div class="card card-main-color" style="width: 18rem;">
+            <div class="col-12 col-md-4">
+              <div class="card card-main-color">
                 <img
                   src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
                   class="article-img card-img-top p-2 mx-auto mb-3"
@@ -150,8 +151,8 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
-              <div class="card card-main-color" style="width: 18rem;">
+            <div class="col-12 col-md-4">
+              <div class="card card-main-color">
                 <img
                   src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
                   class="article-img card-img-top p-2 mx-auto mb-3"
