Using margins to spillout

--- a/index.html
+++ b/index.html
@@ -81,9 +81,6 @@
           </nav>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12"></div>
-      </div>
     </header>
     <main class="container-fluid">
       <div class="row">
@@ -116,9 +113,9 @@
           </class>
         </div>
         <div class="col-12">
-          <div class="row">
+          <div class="row cards-col">
             <div class="col-12 col-md-4">
-              <div class="card card-main-color">
+              <div class="card card-main-color card-spillout">
                 <img
                   src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
                   class="article-img card-img-top p-2 mx-auto mb-3"
@@ -130,12 +127,14 @@
                     Some quick example text to build on the card title and make
                     up the bulk of the card's content.
                   </p>
-                  <a href="#" class="btn btn-primary">Gallery</a>
+                  <a href="#" class="btn btn-primary button-spillout"
+                    >Gallery</a
+                  >
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-4">
-              <div class="card card-main-color">
+              <div class="card card-main-color card-spillout">
                 <img
                   src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
                   class="article-img card-img-top p-2 mx-auto mb-3"
@@ -147,12 +146,14 @@
                     Some quick example text to build on the card title and make
                     up the bulk of the card's content.
                   </p>
-                  <a href="#" class="btn btn-primary">Gallery</a>
+                  <a href="#" class="btn btn-primary button-spillout"
+                    >Gallery</a
+                  >
                 </div>
               </div>
             </div>
             <div class="col-12 col-md-4">
-              <div class="card card-main-color">
+              <div class="card card-main-color card-spillout">
                 <img
                   src="https://www.cyclechaos.com/images/d/d0/Kz650c2_1978.jpg"
                   class="article-img card-img-top p-2 mx-auto mb-3"
@@ -164,13 +165,20 @@
                     Some quick example text to build on the card title and make
                     up the bulk of the card's content.
                   </p>
-                  <a href="#" class="btn btn-primary">Gallery</a>
+                  <a href="#" class="btn btn-primary button-spillout"
+                    >Gallery</a
+                  >
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-12"></div>
+      </div>
+      <hr />
+      <div class="row">
+        <div class="col">
+          <h1>Test text here</h1>
+        </div>
       </div>
     </main>
     <footer>
