Figured out nonsense spillout

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
         </div>
       </div>
-      <hr />
+      <hr class="hr-margin" />
       <div class="row">
         <div class="col">
           <h1>Test text here</h1>
