--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     <main class="container-fluid">
       <div class="row">
         <div class="col">
-          <class class="row">
-            <div class="col-sm-8 order-sm-12">
+          <class class="row d-flex justify-content-around">
+            <div class="col-sm-8 order-sm-12 text-center">
               <!--NOTE iframe youtube link-->
               <iframe
                 class="video-style"
@@ -98,7 +98,7 @@
                 allowfullscreen
               ></iframe>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 text-center">
               <!--NOTE Text and button-->
               <h1 class="text-color">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam
@@ -175,15 +175,38 @@
         </div>
       </div>
       <hr class="hr-margin" />
-      <div class="row">
-        <div class="col">
-          <h1>Test text here</h1>
+      <div class="row d-flex justify-content-around">
+        <div class="col-12 col-md-4 text-center">
+          <img
+            class="img-ht"
+            src="https://cdn.vox-cdn.com/thumbor/39ffimRnYKftgCMOc8BG0AAp_xE=/0x0:2836x1532/920x613/filters:focal(1192x540:1644x992):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/63851312/Screen_Shot_2019_05_17_at_11.48.34_AM.0.png"
+            alt=""
+          />
+        </div>
+        <div class="col-12 col-md-4">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed, id
+            laudantium. Ad placeat, laudantium velit ullam delectus dolore
+            tempore deleniti possimus totam perspiciatis quis nisi quasi
+            assumenda illo voluptate sed.Quia et facere, quo ipsam sit excepturi
+            dolores vero est doloremque eum provident neque amet, voluptatibus
+            repellat saepe. Aperiam sunt pariatur atque iste! Blanditiis
+            assumenda necessitatibus modi voluptas labore a?
+          </p>
         </div>
       </div>
+      <div class="bg-white text-center">
+        <img class="img-ht" src="https://i.imgur.com/eFfmdb3.jpg" alt="" />
+      </div>
     </main>
-    <footer>
-      <div class="row">
-        <div class="col-12"></div>
+    <footer class="container-fluid text-center">
+      <div class="row d-flex justify-content-between">
+        <div class="col-12 col-md-4">
+          <h1>Element</h1>
+        </div>
+        <div class="col-12 col-md-4">
+          <h1>Element</h1>
+        </div>
       </div>
     </footer>
   </body>
