Add bg-color to article row

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             </div>
           </class>
         </div>
-        <div class="col-12">
+        <div class="col-12 bg-white">
           <div class="row cards-col">
             <div class="col-12 col-md-4">
               <div class="card card-main-color card-spillout">
