--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
           </p>
         </div>
       </div>
-      <div class="bg-white text-center">
-        <img class="img-ht" src="https://i.imgur.com/eFfmdb3.jpg" alt="" />
+      <div class="img-logo text-center">
+        <img class="img-ht my-3" src="https://i.imgur.com/eFfmdb3.jpg" alt="" />
       </div>
     </main>
     <footer class="container-fluid text-center">
