--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>MotorPage</title>
+    <title>Katie Wants A Fast One</title>
   </head>
   <body class="bg-bodyimage">
     <header class="container-fluid">
@@ -101,14 +101,28 @@
             <div class="col-sm-4 text-center">
               <!--NOTE Text and button-->
               <h1 class="text-color">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam
-                distinctio ut reiciendis ex! Molestias cumque ratione
-                perspiciatis magni omnis quam itaque nam nisi voluptates fugit!
-                Fuga, asperiores? Voluptates, eius sunt.
+                <h1>Things Katie likes:</h1>
+                <ul class="il">
+                  Dancing
+                </ul>
+                <ul class="il">
+                  Going Fast
+                </ul>
+                <ul class="il">
+                  Her brother ;)
+                </ul>
+                <ul class="il">
+                  Fun music
+                </ul>
               </h1>
-              <button type="button" class="btn-primary btn-rounded">
-                Store
-              </button>
+              <form>
+                <input
+                  type="button"
+                  class="btn-primary"
+                  onclick="window.location.href = 'https://youtu.be/hxUQMu97Eic';"
+                  value="Click Me!"
+                />
+              </form>
             </div>
           </class>
         </div>
