Fixed For Katie

--- a/index.html
+++ b/index.html
@@ -102,23 +102,18 @@
               <!--NOTE Text and button-->
               <h1 class="text-color">
                 <h1>Things Katie likes:</h1>
-                <ul class="il">
-                  Dancing
-                </ul>
-                <ul class="il">
-                  Going Fast
-                </ul>
-                <ul class="il">
-                  Her brother ;)
-                </ul>
-                <ul class="il">
-                  Fun music
-                </ul>
               </h1>
+              <ul>
+                <li>A Fast One</li>
+                <li>Dancing</li>
+                <li>Good Music</li>
+                <li>Her Brother</li>
+                <li>Everyone else in her family ;)</li>
+              </ul>
               <form>
                 <input
                   type="button"
-                  class="btn-primary"
+                  class="btn-primary mx-auto"
                   onclick="window.location.href = 'https://youtu.be/hxUQMu97Eic';"
                   value="Click Me!"
                 />
