--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <input
                   type="button"
                   class="btn-primary mx-auto"
-                  onclick="window.location.href = 'https://youtu.be/hxUQMu97Eic';"
+                  onclick="window.location.href = 'https://www.youtube.com/watch?v=At6oITvbENo';"
                   value="Click Me!"
                 />
               </form>
